# BWRenderer

./: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  DataStructures.h  GameTime.cpp  GameTime.h  InputSystem.cpp  InputSystem.h  Mesh.h  MyTypes.h  PlatformWin32.cpp  PlatformWin32.h  Shader.cpp  Shader.h  Slot.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  main.cpp
Resources/Shaders/: Default2D.frag  Default2D.vert  Default3D.frag  Default3D.vert
assimp/lib/: unit.exp
glad/include/glad/: glad.h
glad/src/: glad.c
stb/: CMakeLists.txt
